[workspace]
resolver = "3"
members = ["crates/muxl-sign"]

# Temporary local override for the streamplace c2pa-rs fork while a fix
# for the wasip1 `tempfile_builder` bug is upstreamed. Drop this section
# and bump the rev in crates/muxl-sign/Cargo.toml once the fix lands on
# the `streamplace` branch.
[patch."https://github.com/streamplace/c2pa-rs.git"]
c2pa = { path = "../c2pa-rs/sdk" }

[package]
name = "muxl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dasl = "0.2"
hex = "0.4"
mp4-atom = { git = "https://github.com/streamplace/mp4-atom.git", branch = "streamplace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tempfile = "3"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
